@@ -27,6 +27,7 @@
 #endif
 #define SMSD_SHM_VERSION (1)
 #define SMSD_DB_VERSION (9)
+#define SMSD_SQL_RETRIES (10)
 
 #define MAX_RETRIES 1
 
